--- a/quartz/components/styles/search.scss
+++ b/quartz/components/styles/search.scss
@@ -7,8 +7,8 @@
 
   & > #search-icon {
     background-color: var(--lightgray);
-    border-radius: 4px;
-    height: 2rem;
+    border-radius: 16px;
+    height: 36px;
     display: flex;
     align-items: center;
     cursor: pointer;
@@ -27,7 +27,7 @@
       cursor: pointer;
       width: 18px;
       min-width: 18px;
-      margin: 0 0.5rem;
+      margin: 0.5rem 1rem 0.5rem 1rem;
 
       .search-path {
         stroke: var(--darkgray);
